--- a/tft_data_analysis.ipynb
+++ b/tft_data_analysis.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 필요한 \n",
+    "# 기본 모듈 임포트\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pickle\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,15 +43,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2. Data Consistency Check"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +163,7 @@
        "4  {'Ziggs': {'items': [], 'star': 1}, 'Yasuo': {...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,8 +173,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Data Consistency Check"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "4  {'Leona': {'items': [], 'star': 1}, 'Mordekais...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "4  {'KhaZix': {'items': [], 'star': 2}, 'KaiSa': ...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "4  {'KhaZix': {'items': [], 'star': 2}, 'KaiSa': ...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -684,7 +684,7 @@
        "4  {'TwistedFate': {'items': [36, 27], 'star': 3}...  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -838,7 +838,7 @@
        "4                   ['Protector']  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -893,7 +893,7 @@
        "['KR_4318806255']"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
        "Int64Index([24504, 24505, 24506, 24507, 24508, 24509, 24510], dtype='int64')"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,16 +931,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "79992"
+       "5"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -1071,7 +1071,7 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1198,7 +1198,7 @@
        " 'Chrono']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
        "9        Chrono"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1339,7 +1339,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Set3_Celestial</td>\n",
+       "      <td>Celestial</td>\n",
        "      <td>2</td>\n",
        "      <td>4.0</td>\n",
        "      <td>6.0</td>\n",
@@ -1441,7 +1441,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>MechPilot</td>\n",
+       "      <td>Mech-Pilot</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1469,7 +1469,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Set3_Void</td>\n",
+       "      <td>Void</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1486,20 +1486,20 @@
        "</div>"
       ],
       "text/plain": [
-       "             type  1st  2nd  3rd\n",
-       "0     SpacePirate    2  4.0  NaN\n",
-       "1    StarGuardian    3  6.0  NaN\n",
-       "2  Set3_Celestial    2  4.0  6.0\n",
-       "3        DarkStar    3  6.0  9.0\n",
-       "4       MechPilot    3  NaN  NaN\n",
-       "5      Cybernetic    3  6.0  NaN\n",
-       "6           Rebel    3  6.0  9.0\n",
-       "7        Valkyrie    2  NaN  NaN\n",
-       "8       Set3_Void    3  NaN  NaN\n",
-       "9          Chrono    2  4.0  6.0"
+       "           type  1st  2nd  3rd\n",
+       "0   SpacePirate    2  4.0  NaN\n",
+       "1  StarGuardian    3  6.0  NaN\n",
+       "2     Celestial    2  4.0  6.0\n",
+       "3      DarkStar    3  6.0  9.0\n",
+       "4    Mech-Pilot    3  NaN  NaN\n",
+       "5    Cybernetic    3  6.0  NaN\n",
+       "6         Rebel    3  6.0  9.0\n",
+       "7      Valkyrie    2  NaN  NaN\n",
+       "8          Void    3  NaN  NaN\n",
+       "9        Chrono    2  4.0  6.0"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,137 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>1st</th>\n",
-       "      <th>2nd</th>\n",
-       "      <th>3rd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SpacePirate</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>StarGuardian</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Set3_Celestial</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DarkStar</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>MechPilot</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Cybernetic</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Rebel</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Valkyrie</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Set3_Void</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Chrono</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             type  1st  2nd  3rd\n",
-       "0     SpacePirate    2  4.0  NaN\n",
-       "1    StarGuardian    3  6.0  NaN\n",
-       "2  Set3_Celestial    2  4.0  6.0\n",
-       "3        DarkStar    3  6.0  9.0\n",
-       "4       MechPilot    3  NaN  NaN\n",
-       "5      Cybernetic    3  6.0  NaN\n",
-       "6           Rebel    3  6.0  9.0\n",
-       "7        Valkyrie    2  NaN  NaN\n",
-       "8       Set3_Void    3  NaN  NaN\n",
-       "9          Chrono    2  4.0  6.0"
-      ]
-     },
-     "execution_count": 300,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 27,
    "metadata": {
     "scrolled": false
    },
@@ -1719,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -1755,7 +1625,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Sniper</td>\n",
+       "      <td>Demolitionist</td>\n",
        "      <td>2</td>\n",
        "      <td>4.0</td>\n",
        "      <td>NaN</td>\n",
@@ -1795,7 +1665,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Starship</td>\n",
+       "      <td>Sniper</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1803,7 +1673,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Demolitionist</td>\n",
+       "      <td>Sorcerer</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1811,7 +1681,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Protector</td>\n",
+       "      <td>Mystic</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1819,7 +1689,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Mystic</td>\n",
+       "      <td>Blademaster</td>\n",
        "      <td>2</td>\n",
        "      <td>4.0</td>\n",
        "      <td>6.0</td>\n",
@@ -1827,7 +1697,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Brawler</td>\n",
+       "      <td>Blaster</td>\n",
        "      <td>1</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1841,41 +1711,32 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Blademaster</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                work  1st  2nd  3rd  4th\n",
-       "0             Sniper    2  4.0  NaN  NaN\n",
+       "0      Demolitionist    2  4.0  NaN  NaN\n",
        "1      Set3_Sorcerer    2  4.0  6.0  8.0\n",
        "2   Set3_Blademaster    3  6.0  9.0  NaN\n",
        "3        Infiltrator    2  4.0  6.0  NaN\n",
        "4        Set3_Mystic    2  4.0  NaN  NaN\n",
-       "5           Starship    1  NaN  NaN  NaN\n",
-       "6      Demolitionist    2  NaN  NaN  NaN\n",
-       "7          Protector    2  NaN  NaN  NaN\n",
-       "8             Mystic    2  4.0  6.0  NaN\n",
-       "9            Brawler    1  NaN  NaN  NaN\n",
-       "10      Set3_Brawler    2  4.0  NaN  NaN\n",
-       "11       Blademaster    2  NaN  NaN  NaN"
+       "5             Sniper    1  NaN  NaN  NaN\n",
+       "6           Sorcerer    2  NaN  NaN  NaN\n",
+       "7             Mystic    2  NaN  NaN  NaN\n",
+       "8        Blademaster    2  4.0  6.0  NaN\n",
+       "9            Blaster    1  NaN  NaN  NaN\n",
+       "10      Set3_Brawler    2  4.0  NaN  NaN"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "work_df[:12]"
+    "work_df[:11]"
    ]
   },
   {
